<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Temperature in Omsk</string>
    <string name="now_in_omsk">Now in Omsk</string>
    <string name="omsk">Omsk</string>
    <string name="no_temp">\?</string>
    <string name="date_format">EEE, MMM d, yyyy hh:mm a</string>
    <string name="temp_format">%+.1f&#x00b0;C</string>
    <string name="zero_temp">0&#x00b0;C</string>
    <string name="update_error">Temperature update failed: %s</string>
    <string name="update_graphs_error">Graphs update failed: %s</string>
    <string name="refresh">Refresh</string>
    <string name="locate">Where is Omsk?</string>
    <string name="widget_temp_format">%+d&#x00b0;</string>
    <string name="widget_zero_temp">0&#x00b0;</string>
    <string name="preferences">Settings</string>
    <string name="display_notification">Notification</string>
    <string name="display_notification_summary">Display the temperature value in the notification bar</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_interval_summary">How often update the temperature value</string>
    <string name="refresh_never">Never (manually)</string>
    <string name="refresh_15m">Every 15 minutes</string>
    <string name="refresh_30m">Every 30 minutes</string>
    <string name="refresh_1h">Every hour</string>
    <string name="refresh_3h">Every 3 hours</string>
    <string name="notification_ticker">%+d&#x00b0; in Omsk</string>
    <string name="notification_title">Now in Omsk %+.1f&#x00b0;C</string>
    <string name="notification_ticker_zero">0&#x00b0; in Omsk</string>
    <string name="notification_title_zero">Now in Omsk 0&#x00b0;C</string>
    <string name="notification_text">Air temperature in the Omsk center</string>
    <string name="style">Style</string>
    <string name="style_summary">Visual style of the notification and widget</string>
    <string name="style_android">Android</string>
    <string name="style_htc">HTC</string>
    <string name="daily_graph">Daily temperature</string>
    <string name="weekly_graph">Weekly temperature</string>
    <string name="monthly_graph">Monthly temperature</string>
    <string name="annual_graph">Annual temperature</string>
    <string name="sd_warn">Please insert SD card to view temperature graphs</string>
</resources>
