<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
            <TextView 
                android:text="@string/now_in_omsk"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/temp_date" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/temp_value"
                android:text="@string/no_temp"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"/>
        </FrameLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:scrollbars="vertical|horizontal">
            <TextView
                android:text="@string/daily_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp">
            </TextView>
            <ImageView
                android:id="@+id/daily_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true">
            </ImageView>
            <TextView
                android:text="@string/weekly_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp">
            </TextView>
            <ImageView
                android:id="@+id/weekly_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true">
            </ImageView>
            <TextView
                android:text="@string/monthly_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp">
            </TextView>
            <ImageView
                android:id="@+id/monthly_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true">
            </ImageView>
            <TextView
                android:text="@string/annual_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp">
            </TextView>
            <ImageView
                android:id="@+id/annual_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true">
            </ImageView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>